# character-snippets

./: .gitignore  .travis.yml  Cargo.toml  README.md  appveyor.yml  package-lock.json
ci/: before_deploy.sh  script.sh
src/: builtin-snippets.toml  main.rs
